--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,12 @@
       <version>4.29.2</version>
     </dependency>
 
+  
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+      <version>2.13.0</version>
+    </dependency>
   </dependencies>
 
   <!-- (24) <repositories/> -->
